--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=graphql-play
+
+#graphql
+spring.graphql.schema.locations=classpath:graphql
+spring.graphql.path=/graphql
+spring.graphql.websocket.path=/graphql
+
+#graphiql
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
