set up operation caching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=graphql-play
 
 #graphql
-spring.graphql.schema.locations=classpath:graphql/lec11
+spring.graphql.schema.locations=classpath:graphql/lec12
 spring.graphql.path=/graphql
 spring.graphql.websocket.path=/graphql
 
 #graphiql
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
+
+logging.level.root = DEBUG
