--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.graphql.websocket.path=/graphql
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
 
-logging.level.root = DEBUG
+logging.level.root = INFO
