finalized the subscription implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=graphql-play
+lec=lec14
 
 #graphql
-spring.graphql.schema.locations=classpath:graphql/lec14
-spring.graphql.path=/graphql
+spring.graphql.schema.locations=classpath:graphql/${lec}
+spring.graphql.http.path=/graphql
 spring.graphql.websocket.path=/graphql
 
 #graphiql
