--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=graphql-play
-lec=lec15
+lec=lec16
 
 #graphql
 spring.graphql.schema.locations=classpath:graphql/${lec}
@@ -11,3 +11,5 @@ spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
 
 logging.level.root = INFO
+
+customer.service.url=http://localhost:8080/graphql
