subscription with websocket client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.graphql.graphiql.path=/graphiql
 logging.level.root = INFO
 
 customer.service.url=http://localhost:8080/graphql
+customer.events.subscription.url=ws://localhost:8080/graphql
